# blog-web

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  start.sh
src/: manage.py
src/blogapp/: forms.py  models.py  urls.py  views.py
src/blogapp/migrations/: 0001_initial.py
src/blogapp/templates/: base.html
src/blogapp/templates/blog/: post_detail.html  post_form.html  post_list.html
src/blogapp/templates/registration/: logged_out.html  login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
src/blogweb/: asgi.py  urls.py  wsgi.py
src/blogweb/settings/: base.py
src/tests/: test_manage.py
