[project]
name = "blog-web"
version = "0.1.0"
description = "Blog Webapp"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pytest = "^8.4.0"
coverage = "^7.9.1"
pytest-django = "^4.11.1"
django-stubs = "^5.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["src/tests"]
python_files = ["test_*.py"]
